k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: puku-app
  labels:
    name: puku-app
