k8s/rating-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rating-service
  namespace: puku-app
spec:
  selector:
    app: rating-service
  ports:
  - port: 8003
    targetPort: 8003
  type: ClusterIP
