k8s/recipe-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-service
  namespace: puku-app
spec:
  selector:
    app: recipe-service
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
